# sdl2-extra

./: README.md  sdl2-extra.cabal
licenses/: sdl2-image-license copy.md  sdl2-mixer-license.md  sdl2-ttf-license.md
src/Helpers/: mixer-helper.c  ttf-helper.c
src/SDL/: Font.hs  Image.hs  Mixer.hs
src/SDL/Raw/: Font.hsc  Helper.hs  Image.hsc  Mixer.hsc
