name:          sdl2-extra
version:       1.2.0
synopsis:      Bindings to SDL2_mixer, SDL2_ttf and SDL2_image.
description:   Haskell bindings to SDL2_mixer, SDL2_ttf and SDL2_image.
license:       BSD3
license-file:  LICENSE
author:        Vladimir Semyonov <tempname011@gmail.com>
               Siniša Biđin <sinisa@bidin.eu>
               Ben Stokmans <benstokmans@hotmail.nl
maintainer:    Ben Stokmans <benstokmans@hotmail.nl
copyright:     Copyright © 2015 Vladimir Semyonov
               Copyright © 2015 Siniša Biđin
               Copyright © 2023 Siniša Biđin
category:      Sound, Foreign, Font, Graphics, Image
build-type:    Simple
cabal-version: >=1.10

source-repository head
  type:     git
  location: https://github.com/BenStokmans/sdl2-extra.git

library
  ghc-options: -Wall

  exposed-modules:
    SDL.Mixer,
    SDL.Font,
    SDL.Image,
    SDL.Raw.Mixer,
    SDL.Raw.Font,
    SDL.Raw.Image

  other-modules:
    SDL.Raw.Helper

  hs-source-dirs:
    src

  pkgconfig-depends:
    sdl2 >= 2.0.3,
    SDL2_ttf >= 2.0.12,
    SDL2_mixer >= 2.0.0,
    SDL2_image >= 2.0.0

  c-sources:
    src/Helpers/mixer-helper.c
    src/Helpers/ttf-helper.c

  build-depends:
    base               >= 4.9 && < 5,
    bytestring         >= 0.10.4.0,
    sdl2               >= 2.2,
    template-haskell,
    text               >= 1.1.0.0 && < 2 || >= 2.0.1,
    th-abstraction     >= 0.4.0.0,
    transformers       >= 0.4,
    vector             >= 0.10,
    monad-control      >= 1.0,
    lifted-base        >= 0.2,
    data-default-class >= 0.0.1

  default-language:
    Haskell2010

  if os(windows)
    cpp-options: -D_SDL_main_h -DSDL_main_h_ -DSDL_MAIN_HANDLED